<resources>
    <string name="app_name">Modern Calculator</string>
    <string name="app_name_modern">MODERN</string>
    <string name="app_name_calculator">CALCULATOR</string>

    <!-- Calculator Part -->
    <string name="calculator">Calculator</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>

    <string name="add">＋</string>
    <string name="subtract">－</string>
    <string name="multiply">×</string>
    <string name="divide">÷</string>

    <string name="clear">C</string>
    <string name="result">=</string>
    <string name="plusMinus">±</string>
    <string name="point">.</string>
    <string name="fraction">F</string>
    <string name="fractionOperator"><![CDATA["@"]]></string>
    <string name="fractionWholeOperator"><![CDATA["#"]]></string>


    <!-- History Part -->
    <string name="history">History</string>


    <!-- Setting Part -->
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>

    <string name="pref_theme_label">Theme</string>
    <string name="pref_theme_key" translatable="false">theme</string>
    <string name="pref_theme_label_black">Black</string>
    <string name="pref_theme_label_pink">Pink</string>
    <string name="pref_theme_label_purple">Purple</string>
    <string name="pref_theme_label_orange">Orange</string>
    <string name="pref_theme_label_yellow">Yellow</string>
    <string name="pref_theme_label_green">Green</string>
    <string name="pref_theme_label_blue">Blue</string>
    <string name="pref_theme_label_gray">Gray</string>
    <string name="pref_theme_label_brown">Brown</string>
    <string name="pref_theme_black_value" translatable="false">Black</string>
    <string name="pref_theme_pink_value" translatable="false">Pink</string>
    <string name="pref_theme_purple_value" translatable="false">Purple</string>
    <string name="pref_theme_orange_value" translatable="false">Orange</string>
    <string name="pref_theme_yellow_value" translatable="false">Yellow</string>
    <string name="pref_theme_green_value" translatable="false">Green</string>
    <string name="pref_theme_blue_value" translatable="false">Blue</string>
    <string name="pref_theme_gray_value" translatable="false">Gray</string>
    <string name="pref_theme_brown_value" translatable="false">Brown</string>

    <string name="pref_vibration_label">Touch Vibration</string>
    <string name="pref_vibration_key" translatable="false">vibration</string>
    <string name="pref_vibration_true">Turn on</string>
    <string name="pref_vibration_false">Turn off</string>


    <!-- ad ID-->
    <string name="admob_app_id">ca-app-pub-8190322516789280~8271453833</string>
    <string name="banner_unit_id">ca-app-pub-8190322516789280/5976462986</string>
    <!--<string name="banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>--> <!-- test id -->
    <string name="interstitial_unit_id">ca-app-pub-8190322516789280/5691971074</string>
    <!--<string name="interstitial_unit_id">ca-app-pub-3940256099942544/1033173712</string>--> <!-- test id -->
</resources>
