<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMenu"
    android:orientation="vertical">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="90dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingStart="24dp"
        android:text="@string/app_name_modern"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name_calculator"
            android:textSize="30sp" />
    </LinearLayout>

    <!--<Space
        android:layout_width="wrap_content"
        android:layout_height="56dp" />-->

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name_calculator"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/meTemp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nav_calculator"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="24dp"
                android:text="@string/calculator"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/myTemp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nav_history"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="24dp"
                android:text="@string/history"
                android:textSize="23sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="24dp"
                android:text="@string/setting"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nav_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nav_setting"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="24dp"
                android:paddingEnd="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:paddingStart="8dp"
                android:paddingEnd="24dp"
                android:text="@string/setting"
                android:textSize="23sp" />
        </LinearLayout>
    </LinearLayout>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

</LinearLayout>